--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.9.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-document-title": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
